--- a/food_data/20250408_음식DB.ipynb
+++ b/food_data/20250408_음식DB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "id": "a5b5b768",
    "metadata": {},
    "outputs": [
@@ -45,7 +45,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_10432\\77373361.py:4: DtypeWarning: Columns (45,126,144,148) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/9d/xx3f44kx0554j918z2q_370m0000gn/T/ipykernel_16091/77373361.py:4: DtypeWarning: Columns (45,126,144,148) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = pd.read_csv(\"20250408_음식DB.csv\")\n"
      ]
     }
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 31,
    "id": "2beef59e",
    "metadata": {},
    "outputs": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 47,
    "id": "8efbdfc0",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "id": "01415163",
    "metadata": {},
    "outputs": [
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "id": "527a36a8",
    "metadata": {},
    "outputs": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "id": "70913d5c",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "Length: 159, dtype: int64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "id": "e0a79955",
    "metadata": {},
    "outputs": [],
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "96f17006",
    "metadata": {},
    "outputs": [],
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "id": "a58dd7cf",
    "metadata": {},
    "outputs": [],
@@ -263,13 +263,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 식품명: 도넛 제거\n",
+    "# 식품명: 도넛 제거 \n",
     "df1 = df1[~(df1['식품명'].str.match('도넛', na=False))]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "2b5164fd",
    "metadata": {},
    "outputs": [],
@@ -283,17 +283,100 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "cd8c10a1",
+   "id": "b6ed8d82",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1.to_csv(\"20250408_음식DB_정제.csv\", index=False, encoding=\"utf-8-sig\")\n"
+    "# '대표식품명' == '멘보샤' 인 것 중 '식품명' == '멘보샤' 만 유지\n",
+    "df1 = df1[~((df1['대표식품명'] == '멘보샤') & (df1['식품명'] != '멘보샤'))]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "c2f2e9b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 식품명: 마카롱, 롤빵, 와플, 크로플, 라\n",
+    "df1 = df1[~(df1['식품명'].str.match('마카롱', na=False))]\n",
+    "df1 = df1[~(df1['식품명'].str.match('롤빵', na=False))]\n",
+    "df1 = df1[~(df1['식품명'].str.match('와플', na=False))]\n",
+    "df1 = df1[~(df1['식품명'].str.match('크로플', na=False))]\n",
+    "df1 = df1[~(df1['대표식품명'].str.match('라떼', na=False))]\n",
+    "df1 = df1[~(df1['대표식품명'].str.match('아이스크림', na=False))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "4a8173e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df1[~(df1['식품대분류명'].str.match('음료 및 차류', na=False))]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1c5cbef",
+   "id": "a4cf2200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df1[~df1['식품명'].str.match('^크로와상_', na=False)]\n",
+    "df1 = df1[~df1['식품명'].str.match('^비스킷_', na=False)]\n",
+    "df1 = df1[~df1['식품명'].str.match('^쿠키_', na=False)]\n",
+    "df1 = df1[~df1['식품명'].str.match('^크래커_', na=False)]\n",
+    "df1 = df1[~df1['식품명'].str.match('^초콜릿_', na=False)]\n",
+    "df1 = df1[~(df1['식품대분류명'].str.match('장류, 양념류', na=False))]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6077c05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = df1[~df1['식품명'].str.contains('비스킷/쿠키/크래커', na=False)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a963ed9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6502f69",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "비스킷/쿠키/크래커"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "cd8c10a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_csv(\"20250408_음식DB_정제.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49368816",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -301,7 +384,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hipython",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -315,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
