--- a/food_data/식품영양섬분데이터.ipynb
+++ b/food_data/식품영양섬분데이터.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "27f0caab",
    "metadata": {},
    "outputs": [
@@ -10,34 +10,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "shortuuid 추가 완료: 59797 rows\n",
-      "   food_id\n",
-      "0      NaN\n",
-      "1      NaN\n",
-      "2      NaN\n",
-      "3      NaN\n",
-      "4      NaN\n"
+      "✅ food_id 생성 완료: 1057 rows\n",
+      "    food_id food_name\n",
+      "0  fr_00001       가래떡\n",
+      "1  fr_00002       깨송편\n",
+      "2  fr_00003        꿀떡\n",
+      "3  fr_00004      모듬찰떡\n",
+      "4  fr_00005       백설기\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "import shortuuid\n",
     "\n",
     "# CSV 불러오기\n",
-    "df = pd.read_csv(\"food_nutrition_data.csv\")\n",
+    "df = pd.read_csv(\"검색식품데이터.csv\", encoding=\"utf-8-sig\")\n",
+    "\n",
     "# food_name이 비어있거나 NaN인 행 제거\n",
     "df = df.dropna(subset=[\"food_name\"])\n",
     "df = df[df[\"food_name\"].astype(str).str.strip() != \"\"]\n",
     "\n",
-    "# food_id 컬럼이 없거나 비어 있으면 새로 생성\n",
-    "df[\"food_id\"] = [shortuuid.uuid() for _ in range(len(df))]\n",
+    "# food_id 새로 생성 (fr_00001, fr_00002, ...)\n",
+    "df[\"food_id\"] = [f\"fr_{i:05d}\" for i in range(1, len(df) + 1)]\n",
     "\n",
     "# 저장\n",
     "df.to_csv(\"food_nutrition.csv\", index=False, encoding=\"utf-8-sig\")\n",
     "\n",
-    "print(\"shortuuid 추가 완료:\", len(df), \"rows\")\n",
-    "print(df[[\"food_id\"]].head())\n",
+    "print(\"✅ food_id 생성 완료:\", len(df), \"rows\")\n",
+    "print(df[[\"food_id\", \"food_name\"]].head())\n",
     "\n"
    ]
   },
