--- a/new_food/data_info_clean.ipynb
+++ b/new_food/data_info_clean.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "5e60e3a2",
    "metadata": {},
    "outputs": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "id": "0f7ca3a6",
    "metadata": {},
    "outputs": [],
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "id": "23818d06",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "id": "dffa840e",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4        한식  떡/한과          60분  259Kcal  4인분       보통         곡류  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 51,
    "id": "f2dbcff3",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 52,
    "id": "fdbec1d6",
    "metadata": {},
    "outputs": [
@@ -486,7 +486,7 @@
        "[537 rows x 11 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "id": "e96b03ed",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 54,
    "id": "f51760ec",
    "metadata": {},
    "outputs": [
@@ -554,6 +554,7 @@
        "      <th>TY_NM</th>\n",
        "      <th>COOKING_TIME</th>\n",
        "      <th>LEVEL_NM</th>\n",
+       "      <th>IRDNT_CODE</th>\n",
        "      <th>1QNT_CALORIE</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -567,6 +568,7 @@
        "      <td>밥</td>\n",
        "      <td>60분</td>\n",
        "      <td>상</td>\n",
+       "      <td>곡류</td>\n",
        "      <td>145.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -578,6 +580,7 @@
        "      <td>밥</td>\n",
        "      <td>60분</td>\n",
        "      <td>상</td>\n",
+       "      <td>곡류</td>\n",
        "      <td>84.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -589,6 +592,7 @@
        "      <td>밥</td>\n",
        "      <td>30분</td>\n",
        "      <td>상</td>\n",
+       "      <td>곡류</td>\n",
        "      <td>130.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -600,6 +604,7 @@
        "      <td>밥</td>\n",
        "      <td>40분</td>\n",
        "      <td>하</td>\n",
+       "      <td>곡류</td>\n",
        "      <td>100.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -611,10 +616,12 @@
        "      <td>떡/한과</td>\n",
        "      <td>60분</td>\n",
        "      <td>상</td>\n",
+       "      <td>곡류</td>\n",
        "      <td>64.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -633,6 +640,7 @@
        "      <td>빵/과자</td>\n",
        "      <td>30분</td>\n",
        "      <td>하</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -644,6 +652,7 @@
        "      <td>밥</td>\n",
        "      <td>30분</td>\n",
        "      <td>하</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -655,6 +664,7 @@
        "      <td>나물/생채/샐러드</td>\n",
        "      <td>20분</td>\n",
        "      <td>하</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -666,6 +676,7 @@
        "      <td>밥</td>\n",
        "      <td>20분</td>\n",
        "      <td>상</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -677,11 +688,12 @@
        "      <td>부침</td>\n",
        "      <td>30분</td>\n",
        "      <td>상</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>537 rows × 8 columns</p>\n",
+       "<p>537 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -711,35 +723,35 @@
        "535               건강한 재료로 가득담아 말은 누드김밥! 고기가 없어도 맛있어요!!        퓨전          밥   \n",
        "536                       두부대신 콩비지를 넣어 만든 동그랑땡 맛도 좋아요!        한식         부침   \n",
        "\n",
-       "    COOKING_TIME LEVEL_NM  1QNT_CALORIE  \n",
-       "0            60분        상        145.00  \n",
-       "1            60분        상         84.50  \n",
-       "2            30분        상        130.00  \n",
-       "3            40분        하        100.25  \n",
-       "4            60분        상         64.75  \n",
-       "..           ...      ...           ...  \n",
-       "532          30분        하          0.00  \n",
-       "533          30분        하          0.00  \n",
-       "534          20분        하          0.00  \n",
-       "535          20분        상          0.00  \n",
-       "536          30분        상          0.00  \n",
+       "    COOKING_TIME LEVEL_NM IRDNT_CODE  1QNT_CALORIE  \n",
+       "0            60분        상         곡류        145.00  \n",
+       "1            60분        상         곡류         84.50  \n",
+       "2            30분        상         곡류        130.00  \n",
+       "3            40분        하         곡류        100.25  \n",
+       "4            60분        상         곡류         64.75  \n",
+       "..           ...      ...        ...           ...  \n",
+       "532          30분        하        NaN          0.00  \n",
+       "533          30분        하        NaN          0.00  \n",
+       "534          20분        하        NaN          0.00  \n",
+       "535          20분        상        NaN          0.00  \n",
+       "536          30분        상        NaN          0.00  \n",
        "\n",
-       "[537 rows x 8 columns]"
+       "[537 rows x 9 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_clean = df_clean.drop(columns=['CALORIE', 'QNT', 'IRDNT_CODE'], errors='ignore')\n",
+    "df_clean = df_clean.drop(columns=['CALORIE', 'QNT'], errors='ignore')\n",
     "df_clean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 55,
    "id": "1ccbb752",
    "metadata": {},
    "outputs": [
@@ -747,7 +759,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['보통' '하' '어려움']\n"
+      "['상' '하']\n"
      ]
     }
    ],
@@ -757,15 +769,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "99335a60",
+   "execution_count": 56,
+   "id": "697e6664",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CALORIE 값이 0인 행 개수: 29\n"
+      "  RECIPE_NM_KO  COOKING_TIME\n",
+      "0        나물비빔밥          60.0\n",
+      "1          오곡밥          60.0\n",
+      "2          잡채밥          30.0\n",
+      "3         콩나물밥          40.0\n",
+      "4           약식          60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# '분' 제거 후 숫자형으로 변환\n",
+    "df_clean['COOKING_TIME'] = df_clean['COOKING_TIME'].astype(str).str.replace('분', '', regex=False).astype(float)\n",
+    "\n",
+    "print(df_clean[['RECIPE_NM_KO', 'COOKING_TIME']].head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "99335a60",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'CALORIE'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Admin\\miniconda3\\envs\\hipython\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'CALORIE'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[57]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m zero_count = (\u001b[43mdf_clean\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mCALORIE\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m == \u001b[32m0\u001b[39m).sum()\n\u001b[32m      2\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mCALORIE 값이 0인 행 개수:\u001b[39m\u001b[33m\"\u001b[39m, zero_count)\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Admin\\miniconda3\\envs\\hipython\\Lib\\site-packages\\pandas\\core\\frame.py:4107\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4105\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4106\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4107\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4108\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4109\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Admin\\miniconda3\\envs\\hipython\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'CALORIE'"
      ]
     }
    ],
@@ -776,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "id": "4d8184c8",
    "metadata": {},
    "outputs": [],
@@ -786,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "id": "4703d289",
    "metadata": {},
    "outputs": [
