--- a/user_data/사용자더미데이터.ipynb
+++ b/user_data/사용자더미데이터.ipynb
@@ -3,27 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e7e4147",
+   "id": "08c14b43",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "사용자 더미 데이터 생성 완료 (user_dummy_data.csv)\n",
-      "                                 UserID   이름      성별       닉네임      생년월일  \\\n",
-      "0  ab4803d4-91a6-4996-b48e-61333badf166  김옥순  female  3nm25d9d  19650226   \n",
-      "1  b5161ee2-4c3d-469a-bb45-b2c0f62a2552  김준호    male  9zzych5n  19960414   \n",
-      "2  1ff7935e-5827-407a-a9c5-a417940b5352  김지훈    male  wgspb963  19841104   \n",
-      "3  c33fe333-9ea9-4422-94e3-ff7756aa5aed  김영수    male  day8vex2  20060508   \n",
-      "4  60dcd171-91dd-4055-9762-ed9a7c0718cc  이성훈    male  lpw27n0s  19471214   \n",
+      "요리 관련 사용자 더미 데이터 생성 완료 (user_dummy_cooking_data.csv)\n",
+      "                                 UserID NAME  GENDER                 EMAIL  \\\n",
+      "0  249a8f76-ce74-41e3-8889-df58707d85d4  이서윤  female  jbvhea7d@example.com   \n",
+      "1  3125fe88-baed-4e0a-880a-be3b9b8fe8d5  한정식  female  xxymh3ma@example.com   \n",
+      "2  305a2d51-848b-42aa-9e62-a72a6169cd5c  김지훈    male  pnsfox8r@example.com   \n",
+      "3  1b5701aa-3296-4c55-a7be-aa3b471da90e  김성진    male  ibvxcxf0@example.com   \n",
+      "4  675eb4cf-954f-47ee-8ba6-c549102de3f6  이준혁  female  b2351o35@example.com   \n",
       "\n",
-      "   몸무게(kg)  신장(cm)                   이메일        비밀번호   지병/알레르기    목표 활동량  \n",
-      "0       66     175     3nm25d9d@daum.net  F#ldEDW6LA  유제품, 갑각류  혈당관리  적음  \n",
-      "1       87     155     9zzych5n@daum.net  FQ1Y6XNcTl        땅콩  체중증량  많음  \n",
-      "2       48     174  wgspb963@outlook.com  MWkIbGY9EX        없음  체중감소  보통  \n",
-      "3       42     168     day8vex2@daum.net  #vRwl8lwDM        없음  체중감소  적음  \n",
-      "4       73     155    lpw27n0s@gmail.com  Xuw*dGn&k2        없음  체중감소  적음  \n"
+      "         ID    PASSWORD  GOAL COOKING_LEVEL  \n",
+      "0  jbvhea7d  FwWroy9T@*     5             하  \n",
+      "1  xxymh3ma  zsoQuNkTe#     5             상  \n",
+      "2  pnsfox8r  &&Pkgnncif     3             상  \n",
+      "3  ibvxcxf0  k6!6uZ7rt8     7             하  \n",
+      "4  b2351o35  YcsSp1US3k     5             하  \n"
      ]
     }
    ],
@@ -33,99 +33,106 @@
     "import uuid\n",
     "import string\n",
     "from faker import Faker\n",
-    "from datetime import datetime\n",
     "\n",
     "fake = Faker(\"ko_KR\")\n",
     "\n",
-    "# 옵션 정의\n",
-    "goals = [\"체중증량\", \"체중감소\", \"혈당관리\"]\n",
-    "activities = [\"많음\", \"보통\", \"적음\"]\n",
-    "allergies = [\"없음\", \"갑각류\", \"땅콩\", \"유제품\", \"계란\", \"밀\"]\n",
-    "domains = [\"gmail.com\", \"naver.com\", \"daum.net\", \"outlook.com\"]\n",
+    "# 요리난이도와 요리횟수(목표)\n",
+    "cooking_levels = [\"상\", \"하\"]\n",
     "\n",
-    "# 비밀번호 생성 (특수문자 제한)\n",
+    "# 아이디 생성 (중복 방지)\n",
+    "def random_userid(length=8):\n",
+    "    return \"\".join(random.choices(string.ascii_lowercase + string.digits, k=length))\n",
+    "\n",
+    "# 비밀번호 생성\n",
     "def random_password(length=10):\n",
     "    allowed_specials = \"!@#*&\"\n",
     "    chars = string.ascii_letters + string.digits + allowed_specials\n",
     "    return \"\".join(random.choice(chars) for _ in range(length))\n",
     "\n",
-    "# 생년월일 생성 (현재 연도 기준 5~90세)\n",
-    "def random_birthday():\n",
-    "    current_year = datetime.now().year\n",
-    "    year = random.randint(current_year - 90, current_year - 5)\n",
-    "    month = random.randint(1, 12)\n",
-    "    day = random.randint(1, 28)\n",
-    "    return f\"{year:04d}{month:02d}{day:02d}\"\n",
-    "\n",
-    "# 성별에 따른 키·몸무게 범위\n",
-    "def random_height_weight(gender):\n",
-    "    if gender == \"male\":\n",
-    "        height = random.randint(140, 185)\n",
-    "        weight = random.randint(40, 100)\n",
-    "    else:\n",
-    "        height = random.randint(130, 175)\n",
-    "        weight = random.randint(35, 80)\n",
-    "    return height, weight\n",
-    "\n",
-    "# 알레르기 랜덤\n",
-    "def random_allergy():\n",
-    "    n = random.choice([0, 1, 2])\n",
-    "    if n == 0:\n",
-    "        return \"없음\"\n",
-    "    return \", \".join(random.sample(allergies[1:], n))\n",
-    "\n",
-    "# 사용자 데이터 생성\n",
+    "# 사용자 더미데이터 생성\n",
     "def generate_users(n=100):\n",
     "    users = []\n",
-    "    used_nicknames = set()\n",
+    "    used_ids = set()\n",
     "\n",
     "    for _ in range(n):\n",
     "        user_id = str(uuid.uuid4())\n",
+    "        name = fake.name()\n",
     "        gender = random.choice([\"male\", \"female\"])\n",
-    "        name = fake.name_male() if gender == \"male\" else fake.name_female()\n",
     "\n",
-    "        # 중복 없는 닉네임\n",
-    "        nickname = None\n",
-    "        while not nickname or nickname in used_nicknames:\n",
-    "            nickname = \"\".join(random.choices(string.ascii_lowercase + string.digits, k=8))\n",
-    "        used_nicknames.add(nickname)\n",
+    "        # 고유 아이디 생성\n",
+    "        uid = None\n",
+    "        while not uid or uid in used_ids:\n",
+    "            uid = random_userid()\n",
+    "        used_ids.add(uid)\n",
     "\n",
-    "        birthday = random_birthday()\n",
-    "        height, weight = random_height_weight(gender)\n",
-    "        email = f\"{nickname}@{random.choice(domains)}\"\n",
+    "        email = f\"{uid}@example.com\"\n",
     "        password = random_password()\n",
-    "        allergy = random_allergy()\n",
-    "        goal = random.choice(goals)\n",
-    "        activity = random.choice(activities)\n",
+    "        goal = random.randint(1, 7)  # 일주일 요리 횟수\n",
+    "        cooking_level = random.choice(cooking_levels)\n",
     "\n",
     "        users.append({\n",
     "            \"UserID\": user_id,\n",
-    "            \"이름\": name,\n",
-    "            \"성별\": gender,\n",
-    "            \"닉네임\": nickname,\n",
-    "            \"생년월일\": birthday,\n",
-    "            \"몸무게(kg)\": weight,\n",
-    "            \"신장(cm)\": height,\n",
-    "            \"이메일\": email,\n",
-    "            \"비밀번호\": password,\n",
-    "            \"지병/알레르기\": allergy,\n",
-    "            \"목표\": goal,\n",
-    "            \"활동량\": activity\n",
+    "            \"NAME\": name,\n",
+    "            \"GENDER\": gender,\n",
+    "            \"EMAIL\": email,\n",
+    "            \"ID\": uid,\n",
+    "            \"PASSWORD\": password,\n",
+    "            \"GOAL\": goal,\n",
+    "            \"COOKING_LEVEL\": cooking_level\n",
     "        })\n",
+    "\n",
     "    return pd.DataFrame(users)\n",
     "\n",
     "# 실행\n",
     "df = generate_users(100)\n",
-    "df.to_csv(\"user_dummy_data.csv\", index=False, encoding=\"utf-8-sig\")\n",
+    "df.to_csv(\"user_info_dummy_data.csv\", index=False, encoding=\"utf-8-sig\")\n",
     "\n",
-    "print(\"사용자 더미 데이터 생성 완료 (user_dummy_data.csv)\")\n",
+    "print(\"요리 관련 사용자 더미 데이터 생성 완료 (user_info_dummy_data.csv)\")\n",
     "print(df.head(5))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c14b43",
+   "id": "f1a868a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "recipe_info 테이블 업로드 완료\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "import pandas as pd\n",
+    "\n",
+    "# '@' → '%40' 로 인코딩한 연결 문자열\n",
+    "engine = create_engine('mysql+pymysql://lgup3:lgup3P%40ssw0rd@211.51.163.232:19306/lgup3')\n",
+    "\n",
+    "# CSV 불러오기\n",
+    "df = pd.read_csv('user_info_dummy_data.csv', encoding='utf-8-sig')\n",
+    "\n",
+    "# DB에 테이블로 적재\n",
+    "df.to_sql('user_info_dummy_data', con=engine, if_exists='replace', index=False)\n",
+    "\n",
+    "print(\"user_info_dummy_data 테이블 업로드 완료\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6b41dc9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec77d43b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -133,7 +140,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fastapi_env",
+   "display_name": "hipython",
    "language": "python",
    "name": "python3"
   },
@@ -147,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
