--- a/crawling/carwling2.ipynb
+++ b/crawling/carwling2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "21f3635e",
    "metadata": {},
    "outputs": [
@@ -11,188 +11,159 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🌿 [START] 국/탕 (cat4=54) 수집 시작\n",
-      "[국/탕] page 1 완료 — 이번 9개 / 누적 9개\n",
-      "[국/탕] page 2 완료 — 이번 13개 / 누적 22개\n",
-      "[국/탕] page 3 완료 — 이번 11개 / 누적 33개\n",
-      "[국/탕] page 4 완료 — 이번 14개 / 누적 47개\n",
-      "[국/탕] page 5 완료 — 이번 8개 / 누적 55개\n",
-      "[국/탕] page 6 완료 — 이번 4개 / 누적 59개\n",
-      "[국/탕] page 7 완료 — 이번 10개 / 누적 69개\n",
-      "[국/탕] page 8 완료 — 이번 5개 / 누적 74개\n",
-      "[국/탕] page 9 완료 — 이번 4개 / 누적 78개\n",
-      "[국/탕] page 10 완료 — 이번 9개 / 누적 87개\n",
-      "[국/탕] page 11 완료 — 이번 6개 / 누적 93개\n",
-      "[국/탕] page 12 완료 — 이번 9개 / 누적 102개\n",
-      "[국/탕] page 13 완료 — 이번 5개 / 누적 107개\n",
-      "[국/탕] page 14 완료 — 이번 10개 / 누적 117개\n",
-      "[국/탕] page 15 완료 — 이번 4개 / 누적 121개\n",
-      "[국/탕] page 16 완료 — 이번 5개 / 누적 126개\n",
-      "[국/탕] page 17 완료 — 이번 6개 / 누적 132개\n",
-      "[국/탕] page 18 완료 — 이번 6개 / 누적 138개\n",
-      "[국/탕] page 19 완료 — 이번 3개 / 누적 141개\n",
-      "[국/탕] page 20 완료 — 이번 2개 / 누적 143개\n",
-      "[국/탕] page 21 완료 — 이번 6개 / 누적 149개\n",
-      "[국/탕] page 22 완료 — 이번 4개 / 누적 153개\n",
-      "[국/탕] page 23 완료 — 이번 3개 / 누적 156개\n",
-      "[국/탕] page 24 완료 — 이번 6개 / 누적 162개\n",
-      "[국/탕] page 25 완료 — 이번 3개 / 누적 165개\n",
-      "[국/탕] page 26 완료 — 이번 5개 / 누적 170개\n",
-      "[국/탕] page 27 완료 — 이번 4개 / 누적 174개\n",
-      "[국/탕] page 28 완료 — 이번 3개 / 누적 177개\n",
-      "[국/탕] page 29 완료 — 이번 4개 / 누적 181개\n",
-      "[국/탕] page 30 완료 — 이번 9개 / 누적 190개\n",
-      "[국/탕] page 31 완료 — 이번 1개 / 누적 191개\n",
-      "[국/탕] 중단 (page 32) — 새로운 레시피 없음\n",
-      "[국/탕] 조회수 10만 이상 레시피 191개 발견\n",
-      "💾 국/탕 완료 — 191개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_국_탕.csv\n",
-      "\n",
-      "🌿 [START] 찌개 (cat4=55) 수집 시작\n",
-      "[찌개] page 1 완료 — 이번 16개 / 누적 16개\n",
-      "[찌개] page 2 완료 — 이번 9개 / 누적 25개\n",
-      "[찌개] page 3 완료 — 이번 14개 / 누적 39개\n",
-      "[찌개] page 4 완료 — 이번 12개 / 누적 51개\n",
-      "[찌개] page 5 완료 — 이번 9개 / 누적 60개\n",
-      "[찌개] page 6 완료 — 이번 6개 / 누적 66개\n",
-      "[찌개] page 7 완료 — 이번 8개 / 누적 74개\n",
-      "[찌개] page 8 완료 — 이번 6개 / 누적 80개\n",
-      "[찌개] page 9 완료 — 이번 6개 / 누적 86개\n",
-      "[찌개] page 10 완료 — 이번 5개 / 누적 91개\n",
-      "[찌개] page 11 완료 — 이번 5개 / 누적 96개\n",
-      "[찌개] page 12 완료 — 이번 5개 / 누적 101개\n",
-      "[찌개] page 13 완료 — 이번 2개 / 누적 103개\n",
-      "[찌개] page 14 완료 — 이번 9개 / 누적 112개\n",
-      "[찌개] page 15 완료 — 이번 5개 / 누적 117개\n",
-      "[찌개] page 16 완료 — 이번 1개 / 누적 118개\n",
-      "[찌개] page 17 완료 — 이번 4개 / 누적 122개\n",
-      "[찌개] page 18 완료 — 이번 5개 / 누적 127개\n",
-      "[찌개] page 19 완료 — 이번 2개 / 누적 129개\n",
-      "[찌개] page 20 완료 — 이번 3개 / 누적 132개\n",
-      "[찌개] page 21 완료 — 이번 1개 / 누적 133개\n",
-      "[찌개] page 22 완료 — 이번 3개 / 누적 136개\n",
-      "[찌개] page 23 완료 — 이번 2개 / 누적 138개\n",
-      "[찌개] 중단 (page 24) — 새로운 레시피 없음\n",
-      "[찌개] 조회수 10만 이상 레시피 138개 발견\n",
-      "💾 찌개 완료 — 138개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_찌개.csv\n",
-      "\n",
-      "🌿 [START] 면/만두 (cat4=53) 수집 시작\n",
-      "[면/만두] page 1 완료 — 이번 9개 / 누적 9개\n",
-      "[면/만두] page 2 완료 — 이번 8개 / 누적 17개\n",
-      "[면/만두] page 3 완료 — 이번 3개 / 누적 20개\n",
-      "[면/만두] page 4 완료 — 이번 5개 / 누적 25개\n",
-      "[면/만두] page 5 완료 — 이번 8개 / 누적 33개\n",
-      "[면/만두] page 6 완료 — 이번 5개 / 누적 38개\n",
-      "[면/만두] page 7 완료 — 이번 3개 / 누적 41개\n",
-      "[면/만두] page 8 완료 — 이번 3개 / 누적 44개\n",
-      "[면/만두] page 9 완료 — 이번 6개 / 누적 50개\n",
-      "[면/만두] page 10 완료 — 이번 6개 / 누적 56개\n",
-      "[면/만두] page 11 완료 — 이번 1개 / 누적 57개\n",
-      "[면/만두] 중단 (page 12) — 새로운 레시피 없음\n",
-      "[면/만두] 조회수 10만 이상 레시피 57개 발견\n",
-      "💾 면/만두 완료 — 57개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_면_만두.csv\n",
-      "\n",
-      "🌿 [START] 밥/죽/떡 (cat4=52) 수집 시작\n",
-      "[밥/죽/떡] page 1 완료 — 이번 16개 / 누적 16개\n",
-      "[밥/죽/떡] page 2 완료 — 이번 17개 / 누적 33개\n",
-      "[밥/죽/떡] page 3 완료 — 이번 13개 / 누적 46개\n",
-      "[밥/죽/떡] page 4 완료 — 이번 14개 / 누적 60개\n",
-      "[밥/죽/떡] page 5 완료 — 이번 6개 / 누적 66개\n",
-      "[밥/죽/떡] page 6 완료 — 이번 6개 / 누적 72개\n",
-      "[밥/죽/떡] page 7 완료 — 이번 7개 / 누적 79개\n",
-      "[밥/죽/떡] page 8 완료 — 이번 7개 / 누적 86개\n",
-      "[밥/죽/떡] page 9 완료 — 이번 6개 / 누적 92개\n",
-      "[밥/죽/떡] page 10 완료 — 이번 7개 / 누적 99개\n",
-      "[밥/죽/떡] page 11 완료 — 이번 5개 / 누적 104개\n",
-      "[밥/죽/떡] page 12 완료 — 이번 6개 / 누적 110개\n",
-      "[밥/죽/떡] page 13 완료 — 이번 4개 / 누적 114개\n",
-      "[밥/죽/떡] page 14 완료 — 이번 9개 / 누적 123개\n",
-      "[밥/죽/떡] page 15 완료 — 이번 2개 / 누적 125개\n",
-      "[밥/죽/떡] page 16 완료 — 이번 7개 / 누적 132개\n",
-      "[밥/죽/떡] page 17 완료 — 이번 4개 / 누적 136개\n",
-      "[밥/죽/떡] page 18 완료 — 이번 4개 / 누적 140개\n",
-      "[밥/죽/떡] page 19 완료 — 이번 5개 / 누적 145개\n",
-      "[밥/죽/떡] page 20 완료 — 이번 3개 / 누적 148개\n",
-      "[밥/죽/떡] page 21 완료 — 이번 4개 / 누적 152개\n",
-      "[밥/죽/떡] page 22 완료 — 이번 5개 / 누적 157개\n",
-      "[밥/죽/떡] page 23 완료 — 이번 3개 / 누적 160개\n",
-      "[밥/죽/떡] page 24 완료 — 이번 1개 / 누적 161개\n",
-      "[밥/죽/떡] page 25 완료 — 이번 5개 / 누적 166개\n",
-      "[밥/죽/떡] page 26 완료 — 이번 1개 / 누적 167개\n",
-      "[밥/죽/떡] page 27 완료 — 이번 4개 / 누적 171개\n",
-      "[밥/죽/떡] page 28 완료 — 이번 4개 / 누적 175개\n",
-      "[밥/죽/떡] page 29 완료 — 이번 4개 / 누적 179개\n",
-      "[밥/죽/떡] page 30 완료 — 이번 4개 / 누적 183개\n",
-      "[밥/죽/떡] page 31 완료 — 이번 7개 / 누적 190개\n",
-      "[밥/죽/떡] page 32 완료 — 이번 4개 / 누적 194개\n",
-      "[밥/죽/떡] page 33 완료 — 이번 4개 / 누적 198개\n",
-      "[밥/죽/떡] page 34 완료 — 이번 3개 / 누적 201개\n",
-      "[밥/죽/떡] page 35 완료 — 이번 3개 / 누적 204개\n",
-      "[밥/죽/떡] page 36 완료 — 이번 3개 / 누적 207개\n",
-      "[밥/죽/떡] page 37 완료 — 이번 6개 / 누적 213개\n",
-      "[밥/죽/떡] page 38 완료 — 이번 2개 / 누적 215개\n",
-      "[밥/죽/떡] page 39 완료 — 이번 2개 / 누적 217개\n",
-      "[밥/죽/떡] page 40 완료 — 이번 2개 / 누적 219개\n",
-      "[밥/죽/떡] page 41 완료 — 이번 2개 / 누적 221개\n",
-      "[밥/죽/떡] page 42 완료 — 이번 2개 / 누적 223개\n",
-      "[밥/죽/떡] page 43 완료 — 이번 3개 / 누적 226개\n",
-      "[밥/죽/떡] page 44 완료 — 이번 1개 / 누적 227개\n",
-      "[밥/죽/떡] page 45 완료 — 이번 1개 / 누적 228개\n",
-      "[밥/죽/떡] page 46 완료 — 이번 3개 / 누적 231개\n",
-      "[밥/죽/떡] 중단 (page 47) — 새로운 레시피 없음\n",
-      "[밥/죽/떡] 조회수 10만 이상 레시피 231개 발견\n",
-      "💾 밥/죽/떡 완료 — 231개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_밥_죽_떡.csv\n",
-      "\n",
-      "🌿 [START] 퓨전 (cat4=61) 수집 시작\n",
-      "[퓨전] page 1 완료 — 이번 1개 / 누적 1개\n",
-      "[퓨전] page 2 완료 — 이번 3개 / 누적 4개\n",
-      "[퓨전] 중단 (page 3) — 새로운 레시피 없음\n",
-      "[퓨전] 조회수 10만 이상 레시피 4개 발견\n",
-      "💾 퓨전 완료 — 4개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_퓨전.csv\n",
-      "\n",
-      "🌿 [START] 양식 (cat4=65) 수집 시작\n",
-      "[양식] page 1 완료 — 이번 3개 / 누적 3개\n",
-      "[양식] page 2 완료 — 이번 2개 / 누적 5개\n",
-      "[양식] page 3 완료 — 이번 3개 / 누적 8개\n",
-      "[양식] page 4 완료 — 이번 3개 / 누적 11개\n",
-      "[양식] page 5 완료 — 이번 2개 / 누적 13개\n",
-      "[양식] page 6 완료 — 이번 1개 / 누적 14개\n",
-      "[양식] page 7 완료 — 이번 1개 / 누적 15개\n",
-      "[양식] page 8 완료 — 이번 2개 / 누적 17개\n",
-      "[양식] page 9 완료 — 이번 2개 / 누적 19개\n",
-      "[양식] page 10 완료 — 이번 1개 / 누적 20개\n",
-      "[양식] page 11 완료 — 이번 1개 / 누적 21개\n",
-      "[양식] page 12 완료 — 이번 1개 / 누적 22개\n",
-      "[양식] 중단 (page 13) — 새로운 레시피 없음\n",
-      "[양식] 조회수 10만 이상 레시피 22개 발견\n",
-      "💾 양식 완료 — 22개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_양식.csv\n",
-      "\n",
-      "🌿 [START] 샐러드 (cat4=64) 수집 시작\n",
-      "[샐러드] page 1 완료 — 이번 13개 / 누적 13개\n",
-      "[샐러드] page 2 완료 — 이번 4개 / 누적 17개\n",
-      "[샐러드] page 3 완료 — 이번 1개 / 누적 18개\n",
-      "[샐러드] page 4 완료 — 이번 3개 / 누적 21개\n",
-      "[샐러드] page 5 완료 — 이번 4개 / 누적 25개\n",
-      "[샐러드] page 6 완료 — 이번 3개 / 누적 28개\n",
-      "[샐러드] page 7 완료 — 이번 4개 / 누적 32개\n",
-      "[샐러드] 중단 (page 8) — 새로운 레시피 없음\n",
-      "[샐러드] 조회수 10만 이상 레시피 32개 발견\n",
-      "💾 샐러드 완료 — 32개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_샐러드.csv\n",
-      "\n",
-      "🌿 [START] 스프 (cat4=68) 수집 시작\n",
-      "[스프] page 1 완료 — 이번 5개 / 누적 5개\n",
-      "[스프] page 2 완료 — 이번 2개 / 누적 7개\n",
-      "[스프] page 3 완료 — 이번 1개 / 누적 8개\n",
-      "[스프] 중단 (page 4) — 새로운 레시피 없음\n",
-      "[스프] 조회수 10만 이상 레시피 8개 발견\n",
-      "💾 스프 완료 — 8개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_스프.csv\n",
-      "\n",
-      "🌿 [START] 기타 (cat4=62) 수집 시작\n",
-      "[기타] page 1 완료 — 이번 1개 / 누적 1개\n",
-      "[기타] 중단 (page 2) — 새로운 레시피 없음\n",
-      "[기타] 조회수 10만 이상 레시피 1개 발견\n",
-      "💾 기타 완료 — 1개 저장 → c:\\githome\\Personalized_healthcare_Project\\crawling\\recipes_over100k_기타.csv\n",
-      "\n",
-      "🎯 전체 cat4 수집 완료 — 모든 조회수 10만 이상 레시피 저장 완료!\n"
+      "🌿 [START] 밑반찬 (cat4=63) 수집 시작\n",
+      "[밑반찬] page 1 완료 — 이번 8개 / 누적 8개\n",
+      "[밑반찬] page 2 완료 — 이번 10개 / 누적 18개\n",
+      "[밑반찬] page 3 완료 — 이번 19개 / 누적 37개\n",
+      "[밑반찬] page 4 완료 — 이번 17개 / 누적 54개\n",
+      "[밑반찬] page 5 완료 — 이번 21개 / 누적 75개\n",
+      "[밑반찬] page 6 완료 — 이번 22개 / 누적 97개\n",
+      "[밑반찬] page 7 완료 — 이번 20개 / 누적 117개\n",
+      "[밑반찬] page 8 완료 — 이번 12개 / 누적 129개\n",
+      "[밑반찬] page 9 완료 — 이번 20개 / 누적 149개\n",
+      "[밑반찬] page 10 완료 — 이번 15개 / 누적 164개\n",
+      "[밑반찬] page 11 완료 — 이번 17개 / 누적 181개\n",
+      "[밑반찬] page 12 완료 — 이번 16개 / 누적 197개\n",
+      "[밑반찬] page 13 완료 — 이번 11개 / 누적 208개\n",
+      "[밑반찬] page 14 완료 — 이번 22개 / 누적 230개\n",
+      "[밑반찬] page 15 완료 — 이번 14개 / 누적 244개\n",
+      "[밑반찬] page 16 완료 — 이번 19개 / 누적 263개\n",
+      "[밑반찬] page 17 완료 — 이번 13개 / 누적 276개\n",
+      "[밑반찬] page 18 완료 — 이번 11개 / 누적 287개\n",
+      "[밑반찬] page 19 완료 — 이번 15개 / 누적 302개\n",
+      "[밑반찬] page 20 완료 — 이번 12개 / 누적 314개\n",
+      "[밑반찬] page 21 완료 — 이번 11개 / 누적 325개\n",
+      "[밑반찬] page 22 완료 — 이번 12개 / 누적 337개\n",
+      "[밑반찬] page 23 완료 — 이번 12개 / 누적 349개\n",
+      "[밑반찬] page 24 완료 — 이번 14개 / 누적 363개\n",
+      "[밑반찬] page 25 완료 — 이번 14개 / 누적 377개\n",
+      "[밑반찬] page 26 완료 — 이번 6개 / 누적 383개\n",
+      "[밑반찬] page 27 완료 — 이번 7개 / 누적 390개\n",
+      "[밑반찬] page 28 완료 — 이번 13개 / 누적 403개\n",
+      "[밑반찬] page 29 완료 — 이번 8개 / 누적 411개\n",
+      "[밑반찬] page 30 완료 — 이번 11개 / 누적 422개\n",
+      "[밑반찬] page 31 완료 — 이번 9개 / 누적 431개\n",
+      "[밑반찬] page 32 완료 — 이번 6개 / 누적 437개\n",
+      "[밑반찬] page 33 완료 — 이번 5개 / 누적 442개\n",
+      "[밑반찬] page 34 완료 — 이번 9개 / 누적 451개\n",
+      "[밑반찬] page 35 완료 — 이번 5개 / 누적 456개\n",
+      "[밑반찬] page 36 완료 — 이번 12개 / 누적 468개\n",
+      "[밑반찬] page 37 완료 — 이번 10개 / 누적 478개\n",
+      "[밑반찬] page 38 완료 — 이번 6개 / 누적 484개\n",
+      "[밑반찬] page 39 완료 — 이번 11개 / 누적 495개\n",
+      "[밑반찬] page 40 완료 — 이번 8개 / 누적 503개\n",
+      "[밑반찬] page 41 완료 — 이번 7개 / 누적 510개\n",
+      "[밑반찬] page 42 완료 — 이번 11개 / 누적 521개\n",
+      "[밑반찬] page 43 완료 — 이번 8개 / 누적 529개\n",
+      "[밑반찬] page 44 완료 — 이번 4개 / 누적 533개\n",
+      "[밑반찬] page 45 완료 — 이번 13개 / 누적 546개\n",
+      "[밑반찬] page 46 완료 — 이번 4개 / 누적 550개\n",
+      "[밑반찬] page 47 완료 — 이번 6개 / 누적 556개\n",
+      "[밑반찬] page 48 완료 — 이번 13개 / 누적 569개\n",
+      "[밑반찬] page 49 완료 — 이번 9개 / 누적 578개\n",
+      "[밑반찬] page 50 완료 — 이번 8개 / 누적 586개\n",
+      "[밑반찬] page 51 완료 — 이번 6개 / 누적 592개\n",
+      "[밑반찬] page 52 완료 — 이번 12개 / 누적 604개\n",
+      "[밑반찬] page 53 완료 — 이번 3개 / 누적 607개\n",
+      "[밑반찬] page 54 완료 — 이번 5개 / 누적 612개\n",
+      "[밑반찬] page 55 완료 — 이번 5개 / 누적 617개\n",
+      "[밑반찬] page 56 완료 — 이번 11개 / 누적 628개\n",
+      "[밑반찬] page 57 완료 — 이번 6개 / 누적 634개\n",
+      "[밑반찬] page 58 완료 — 이번 8개 / 누적 642개\n",
+      "[밑반찬] page 59 완료 — 이번 5개 / 누적 647개\n",
+      "[밑반찬] page 60 완료 — 이번 7개 / 누적 654개\n",
+      "[밑반찬] page 61 완료 — 이번 5개 / 누적 659개\n",
+      "[밑반찬] page 62 완료 — 이번 10개 / 누적 669개\n",
+      "[밑반찬] page 63 완료 — 이번 7개 / 누적 676개\n",
+      "[밑반찬] page 64 완료 — 이번 8개 / 누적 684개\n",
+      "[밑반찬] page 65 완료 — 이번 4개 / 누적 688개\n",
+      "[밑반찬] page 66 완료 — 이번 6개 / 누적 694개\n",
+      "[밑반찬] page 67 완료 — 이번 6개 / 누적 700개\n",
+      "[밑반찬] page 68 완료 — 이번 4개 / 누적 704개\n",
+      "[밑반찬] page 69 완료 — 이번 7개 / 누적 711개\n",
+      "[밑반찬] page 70 완료 — 이번 6개 / 누적 717개\n",
+      "[밑반찬] page 71 완료 — 이번 7개 / 누적 724개\n",
+      "[밑반찬] page 72 완료 — 이번 7개 / 누적 731개\n",
+      "[밑반찬] page 73 완료 — 이번 4개 / 누적 735개\n",
+      "[밑반찬] page 74 완료 — 이번 3개 / 누적 738개\n",
+      "[밑반찬] page 75 완료 — 이번 1개 / 누적 739개\n",
+      "[밑반찬] page 76 완료 — 이번 6개 / 누적 745개\n",
+      "[밑반찬] page 77 완료 — 이번 11개 / 누적 756개\n",
+      "[밑반찬] page 78 완료 — 이번 4개 / 누적 760개\n",
+      "[밑반찬] page 79 완료 — 이번 6개 / 누적 766개\n",
+      "[밑반찬] page 80 완료 — 이번 8개 / 누적 774개\n",
+      "[밑반찬] page 81 완료 — 이번 10개 / 누적 784개\n",
+      "[밑반찬] page 82 완료 — 이번 6개 / 누적 790개\n",
+      "[밑반찬] page 83 완료 — 이번 8개 / 누적 798개\n",
+      "[밑반찬] page 84 완료 — 이번 6개 / 누적 804개\n",
+      "[밑반찬] page 85 완료 — 이번 5개 / 누적 809개\n",
+      "[밑반찬] page 86 완료 — 이번 5개 / 누적 814개\n",
+      "[밑반찬] page 87 완료 — 이번 8개 / 누적 822개\n",
+      "[밑반찬] page 88 완료 — 이번 8개 / 누적 830개\n",
+      "[밑반찬] page 89 완료 — 이번 4개 / 누적 834개\n",
+      "[밑반찬] page 90 완료 — 이번 3개 / 누적 837개\n",
+      "[밑반찬] page 91 완료 — 이번 5개 / 누적 842개\n",
+      "[밑반찬] page 92 완료 — 이번 4개 / 누적 846개\n",
+      "[밑반찬] page 93 완료 — 이번 4개 / 누적 850개\n",
+      "[밑반찬] page 94 완료 — 이번 7개 / 누적 857개\n",
+      "[밑반찬] page 95 완료 — 이번 8개 / 누적 865개\n",
+      "[밑반찬] page 96 완료 — 이번 6개 / 누적 871개\n",
+      "[밑반찬] page 97 완료 — 이번 4개 / 누적 875개\n",
+      "[밑반찬] page 98 완료 — 이번 4개 / 누적 879개\n",
+      "[밑반찬] page 99 완료 — 이번 3개 / 누적 882개\n",
+      "[밑반찬] page 100 완료 — 이번 6개 / 누적 888개\n",
+      "[밑반찬] page 101 완료 — 이번 9개 / 누적 897개\n",
+      "[밑반찬] page 102 완료 — 이번 7개 / 누적 904개\n",
+      "[밑반찬] page 103 완료 — 이번 3개 / 누적 907개\n",
+      "[밑반찬] page 104 완료 — 이번 8개 / 누적 915개\n",
+      "[밑반찬] page 105 완료 — 이번 6개 / 누적 921개\n",
+      "[밑반찬] page 106 완료 — 이번 3개 / 누적 924개\n",
+      "[밑반찬] page 107 완료 — 이번 8개 / 누적 932개\n",
+      "[밑반찬] page 108 완료 — 이번 2개 / 누적 934개\n",
+      "[밑반찬] page 109 완료 — 이번 2개 / 누적 936개\n",
+      "[밑반찬] page 110 완료 — 이번 4개 / 누적 940개\n",
+      "[밑반찬] page 111 완료 — 이번 3개 / 누적 943개\n",
+      "[밑반찬] page 112 완료 — 이번 3개 / 누적 946개\n",
+      "[밑반찬] page 113 완료 — 이번 7개 / 누적 953개\n",
+      "[밑반찬] page 114 완료 — 이번 5개 / 누적 958개\n",
+      "[밑반찬] page 115 완료 — 이번 4개 / 누적 962개\n",
+      "[밑반찬] page 116 완료 — 이번 4개 / 누적 966개\n",
+      "[밑반찬] page 117 완료 — 이번 2개 / 누적 968개\n",
+      "[밑반찬] page 118 완료 — 이번 7개 / 누적 975개\n",
+      "[밑반찬] page 119 완료 — 이번 5개 / 누적 980개\n",
+      "[밑반찬] page 120 완료 — 이번 8개 / 누적 988개\n",
+      "[밑반찬] page 121 완료 — 이번 5개 / 누적 993개\n",
+      "[밑반찬] page 122 완료 — 이번 5개 / 누적 998개\n",
+      "[밑반찬] page 123 완료 — 이번 4개 / 누적 1002개\n",
+      "[밑반찬] page 124 완료 — 이번 4개 / 누적 1006개\n",
+      "[밑반찬] page 125 완료 — 이번 4개 / 누적 1010개\n",
+      "[밑반찬] page 126 완료 — 이번 3개 / 누적 1013개\n",
+      "[밑반찬] page 127 완료 — 이번 6개 / 누적 1019개\n",
+      "[밑반찬] page 128 완료 — 이번 7개 / 누적 1026개\n",
+      "[밑반찬] page 129 완료 — 이번 5개 / 누적 1031개\n",
+      "[밑반찬] page 130 완료 — 이번 3개 / 누적 1034개\n",
+      "[밑반찬] page 131 완료 — 이번 4개 / 누적 1038개\n",
+      "[밑반찬] page 132 완료 — 이번 4개 / 누적 1042개\n",
+      "[밑반찬] page 133 완료 — 이번 5개 / 누적 1047개\n",
+      "[밑반찬] page 134 완료 — 이번 7개 / 누적 1054개\n",
+      "[밑반찬] page 135 완료 — 이번 7개 / 누적 1061개\n",
+      "[밑반찬] page 136 완료 — 이번 4개 / 누적 1065개\n",
+      "[밑반찬] page 137 완료 — 이번 5개 / 누적 1070개\n",
+      "[밑반찬] page 138 완료 — 이번 5개 / 누적 1075개\n",
+      "[밑반찬] page 139 완료 — 이번 4개 / 누적 1079개\n",
+      "[밑반찬] page 140 완료 — 이번 5개 / 누적 1084개\n",
+      "[밑반찬] page 141 완료 — 이번 2개 / 누적 1086개\n",
+      "[밑반찬] page 142 완료 — 이번 6개 / 누적 1092개\n",
+      "[밑반찬] page 143 완료 — 이번 8개 / 누적 1100개\n",
+      "[밑반찬] page 144 완료 — 이번 2개 / 누적 1102개\n",
+      "[밑반찬] page 145 완료 — 이번 3개 / 누적 1105개\n",
+      "[밑반찬] page 146 완료 — 이번 8개 / 누적 1113개\n",
+      "[밑반찬] page 147 완료 — 이번 7개 / 누적 1120개\n",
+      "[밑반찬] page 148 완료 — 이번 6개 / 누적 1126개\n",
+      "[밑반찬] page 149 완료 — 이번 4개 / 누적 1130개\n",
+      "[밑반찬] page 150 완료 — 이번 5개 / 누적 1135개\n",
+      "[밑반찬] page 151 완료 — 이번 6개 / 누적 1141개\n",
+      "[밑반찬] page 152 완료 — 이번 3개 / 누적 1144개\n"
      ]
     }
    ],
@@ -210,7 +181,7 @@
     "\n",
     "# ✅ cat4 분류\n",
     "CAT4_MAP = {\n",
-    "    54: \"국/탕\", 55: \"찌개\",\n",
+    "    63: \"밑반찬\", 56: \"메인반찬\", 54: \"국/탕\", 55: \"찌개\",\n",
     "    53: \"면/만두\", 52: \"밥/죽/떡\", 61: \"퓨전\", 65: \"양식\", 64: \"샐러드\", 68: \"스프\", 62: \"기타\"\n",
     "}\n",
     "\n",
@@ -262,8 +233,8 @@
     "                except:\n",
     "                    continue\n",
     "\n",
-    "            # ✅ 필터링: 조회수 10만 이상\n",
-    "            if views >= 100000:\n",
+    "            # ✅ 필터링: 조회수 5만 이상\n",
+    "            if views >= 50000:\n",
     "                new_ids.append(recipe_id)\n",
     "\n",
     "        ids_set = set(new_ids)\n",
@@ -385,7 +356,7 @@
     "            df = pd.DataFrame(data_list)\n",
     "            # 파일명에 사용할 수 없는 문자(예: / \\ : * ? \" < > |)를 언더스코어로 대체\n",
     "            safe_cat = re.sub(r'[<>:\"/\\\\|?*]', '_', cat_name)\n",
-    "            filename = f\"recipes_over100k_{safe_cat}.csv\"\n",
+    "            filename = f\"recipes_over100k2_{safe_cat}.csv\"\n",
     "            out_path = os.path.join(os.getcwd(), filename)\n",
     "            df.to_csv(out_path, index=False, encoding=\"utf-8-sig\")\n",
     "            print(f\"💾 {cat_name} 완료 — {len(df)}개 저장 → {out_path}\")\n",
